<resources>
    <string name="app_name">Estimeet</string>
    <string name="google_app_id">1:555509669784:android:added8866f6c5b13</string>
    <string name="text_enter_mobile_number">Enter your mobile number</string>
    <string name="sign_in">SIGN IN</string>

    <string name="profile_enter_name_hint">Enter Your Name</string>
    <string name="profile_or_text">or</string>

    <string name="permission_page_contact_book">Contact Book</string>
    <string name="permission_page_text_top">We need to access your contact</string>
    <string name="permission_page_text_bot">book to find your friends</string>
    <string name="permission_page_button">Grant Contact Permission</string>
    <string name="permission_page_addon">We also need access to location and notification</string>

    <string name="facebook_id">1725764340993391</string>
    <string name="button_ok">Ok</string>

    <string name="fb_button_text">Import from facebook</string>
    <string name="get_started_text">Get Started</string>

    <string name="error_invialid_name">Please enter your name</string>
    <string name="http_generic_error">500</string>
    <string name="http_auth_error">401</string>

    <string name="progress_loading">Loading</string>

    <string name="search_phone">Add By Phone Number</string>

    <string name="error_unable_to_crop_image">An error occurred while cropping the image</string>
    <string name="error_create_temp_file">An error occurred when accessing your camera</string>
    <string name="error_500">An error occurred on the server, please try again later</string>
    <string name="error_digits">An error occurred while processing your phone number, please try again</string>
    <string name="error_network">Request failed, please check your internet and try again</string>
    <string name="error_generic">An error has occurred, please try again</string>
    <string name="error_null_user_geo">An error has occurred while getting your location. Is your GPS turned on?</string>
    
    <string name="title_manage_friend">Manage Friends</string>
    <string name="title_profile_and_setting">Profile and settings</string>
    <string name="toolbar_search">search</string>
    <string name="friend_recommend_friend">Recommended Friends</string>
    <string name="friend_header">Friends</string>
    <string name="session_header">Active</string>
    <string name="profile_title_mobile_number">Mobile Number:</string>
    <string name="fab_manage_friends">Manage Friends</string>
    <string name="fab_profile">Profile</string>
    <string name="send_request_title">Send Estimeet</string>
    <string name="send_request_sub_title">Swipe to request</string>
    <string name="profile_greeting_message">Hi %s !</string>

    <string name="push_SENDER_ID">403360413079</string>
    <string name="push_HUB_NAME">meetup</string>
    <string name="push_HUB_LISTENER_STRING">Endpoint=sb://meetup.servicebus.windows.net/;SharedAccessKeyName=DefaultListenSharedAccessSignature;SharedAccessKey=3XEU5LpvQH7DsLfWIj4t+6csDar4B0PE83rxlm1qJDE="</string>
    <string name="push_session_request">Your friend wants to estimeet you!</string>
    <string name="push_session_request_friend">wants to estimeet you!</string>
    <string name="send_estimeet_message">Estimeet request sent</string>
    <string name="session_refresh_message">Swipe to Refresh  (expire in 30 min)</string>
    <string name="accept">Accept</string>
    <string name="ignore">Ignore</string>
    <string name="push_session_starts">New estimeet session created</string>
    <string name="session_length_30">30 Minutes</string>
    <string name="error_location_permission">We need permission for your location, please enable it in settings.</string>
    <string name="error_play_service">Google play service not available, the core functionality is based on the Play Service.</string>
    <string name="error_title">Error</string>
    <string name="meetup_subtitle">Estimeet helps you meet up with your friends. \nNo more calls and texts to find out where they are!</string>
    <string name="error_session_expired">Session has expired. Please send another estimeet.</string>
    <string name="error_session_generic">An error occurred while getting the distance, please try again</string>
    <string name="distance_format">KM</string>
    <string name="travel_walk">walk</string>
    <string name="travel_drive">car</string>
    <string name="travel_transit">bus</string>
    <string name="location_unknown">Unknown</string>
    <string name="expired_string">(Needs Refresh)</string>
    <string name="minute_string">Minute(s)</string>
    <string name="hour_string">Hour(s)</string>

    <string name="travel_walk_message">You are \non foot</string>
    <string name="travel_bus_message">You are \nin a bus</string>
    <string name="travel_car_message">You are \nin a car</string>

    <string name="distance_title">Distance: </string>
    <string name="eta_title">ETA: </string>
    <string name="location_title">Location: </string>
    <string name="dialog_top_text">How are you getting around?</string>
    <string name="dialog_walking">Walking</string>
    <string name="error_session_friend_expired">Friend didn\'t upload their location yet, please try again later</string>
    <string name="save">Save</string>
    <string name="cancel_session_message">Estimeet session cancelled</string>
    <string name ="dialog_GPS_on_heading">Locations is Off</string>
    <string name ="dialog_GPS_on">Please turn locations on to use Estimeet</string>

    <string name="no_friend_top_line">Its empty here :\'(</string>
    <string name="no_friend_bot_line">Add friends to send Estimeets</string>
    <string name="btn_add_friends">Add Friends</string>

    <string name="map_message">Hint: You can only see friends that are closeby</string>
</resources>
