<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:src="@drawable/contact_book"
        android:layout_marginBottom="80dp"
        android:contentDescription="@null"/>

    <estimeet.meetup.util.widget.OmnesTextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:text="@string/permission_page_contact_book"
        app:typeface="medium"/>

    <estimeet.meetup.util.widget.OmnesTextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/permission_page_text_top"
        app:typeface="regular" />

    <estimeet.meetup.util.widget.OmnesTextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/permission_page_text_bot"
        app:typeface="regular"/>

    <estimeet.meetup.util.widget.OmnesButton
        android:id="@+id/btn_grant_permission"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rounded_button"
        android:text="@string/permission_page_button"
        android:textColor="@color/white"
        app:typeface="medium"/>

    <estimeet.meetup.util.widget.OmnesTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/permission_page_addon"
        android:textColor="@color/grey"/>

</FrameLayout>