<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/no_friend_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginBottom="80dp"
            android:src="@drawable/no_friend_icon"
            android:contentDescription="@null"/>

        <estimeet.meetup.util.widget.OmnesTextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:typeface="medium"
            android:text="@string/no_friend_top_line"/>

        <estimeet.meetup.util.widget.OmnesTextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:typeface="medium"
            android:text="@string/no_friend_bot_line"/>

        <estimeet.meetup.util.widget.OmnesButton
            android:id="@+id/btn_add_friends"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/rounded_button"
            android:text="@string/btn_add_friends"
            app:typeface="regular"/>
    </FrameLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/google_map_static"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/no_friend_icon"
            android:visibility="gone"
            />
        <estimeet.meetup.util.widget.OmnesTextView
            android:id="@+id/map_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/google_map_static"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:background="#80000000"
            android:textColor="@color/white"
            app:typeface="regular"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/map_message"
            android:visibility="gone"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_manage_friends_list"
            android:layout_below="@+id/google_map_static"
            android:visibility="gone"/>
    </RelativeLayout>


    <include layout="@layout/floating_action_button" />

</android.support.design.widget.CoordinatorLayout>