<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/dp_1"
                android:scaleType="centerInside"
                android:contentDescription="@null"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_toRightOf="@id/profile_image"
                android:layout_marginLeft="-30dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/ic_camera_icon"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:textColor="@color/colorMain"
            android:textSize="24sp"
            android:text="@string/profile_enter_name_hint"/>

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:hint="@null"
            android:background="@drawable/round_edit_text"/>

        <Button
            android:id="@+id/btn_get_started"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:text="@string/get_started_text"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            android:stateListAnimator="@null"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp">

            <View
                android:id="@+id/line_view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_centerVertical="true"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:textSize="24sp"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/profile_or_text"
                android:background="@color/grey_Lighter"
                android:textColor="@android:color/darker_gray"/>

        </RelativeLayout>

        <Button
            android:id="@+id/fb_login_display_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/facebook_button"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/fb_button_text"
            android:stateListAnimator="@null"
            />

    </LinearLayout>

    <include layout="@layout/merge_progress_bar" />

</FrameLayout>